--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,10 @@
     font-family: 'Poppins', sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 li {
     list-style: none;
 }
@@ -35,7 +39,7 @@ p {
 
 header {
     position: relative;
-    padding: 0 4rem;
+    padding: 0 2rem;
     height: 100vh;
     background-color: #000;
     width: 100%;
@@ -127,24 +131,11 @@ header {
     justify-content: center;
 }
 
-/* KARTY HLAVNÍ STRÁNKA */
-.cards-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    background-color: black;
-    padding: 20px;
-    height: 100vh;
-}
-
 /* main */
 .text-box {
     height: calc(100vh - 60px);
     display: flex;
     flex-direction: column;
-    top: 50%;
-    left: 50%;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -152,21 +143,36 @@ header {
 }
 
 .text-box h1 {
-    font-size: 62px;
+    font-size: 4rem;
     margin-bottom: 1rem;
 }
 
 .text-box p {
-    margin: 10px 0 40px;
-    font-size: 14px;
+    margin: 10px 0 2rem;
+    font-size: 1rem;
     color: #fff;
+}
+
+@media screen and (max-width: 768px) {
+    header {
+        padding: 0 1rem;
+    }
+
+    .text-box h1 {
+        font-size: 3rem;
+    }
+
+    .text-box p {
+        margin: 10px 0 1rem;
+        font-size: 0.75rem;
+    }
 }
 
 .tlacitka {
     display: flex;
     justify-content: center;
     width: 100%;
-    max-width: 500px; /* Set maximum width for container */
+    max-width: 500px;
     margin: 0 auto;
     padding-top: 30px;
 }
@@ -181,10 +187,10 @@ header {
     background: transparent;
     position: relative;
     cursor: pointer;
-    margin: 0 5px; /* Decrease margin */
-    flex-grow: 1; /* Make both buttons grow equally */
-    max-width: 150px; /* Set maximum width for each button */
-    box-sizing: border-box; /* Include padding in max-width calculation */
+    margin: 0 5px;
+    flex-grow: 1;
+    max-width: 150px;
+    box-sizing: border-box;
 }
 
 .hero-btn:hover {
@@ -659,4 +665,144 @@ hr {
 
 .fa-facebook:hover, .fa-instagram:hover, .fa-twitter:hover, .fa-spotify:hover, .fa-youtube:hover {
     opacity: 0.7;
+}
+
+/* KARTY HLAVNÍ STRÁNKA */
+
+.cards-wrapper {
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 4rem;
+    padding: 4rem;
+    margin: 0 auto;
+    width: max-content;
+}
+
+.card {
+    font-family: 'Heebo';
+    --bg-filter-opacity: 0.5;
+    background-image: linear-gradient(rgba(0, 0, 0, var(--bg-filter-opacity)), rgba(0, 0, 0, var(--bg-filter-opacity))), var(--bg-img);
+    height: 20em;
+    width: 15em;
+    font-size: 1.5em;
+    color: white;
+    border-radius: 1em;
+    padding: 1em;
+    display: flex;
+    align-items: flex-end;
+    background-size: cover;
+    background-position: center;
+    box-shadow: 0 0 5em -1em black;
+    transition: all, 0.5s;
+    position: relative;
+    overflow: hidden;
+    border: 10px solid #ccc;
+    text-decoration: none;
+}
+
+.card:hover {
+    transform: scale(1.1);
+    z-index: 1;
+}
+
+.card h1 {
+    margin: 0;
+    font-size: 1.5em;
+    line-height: 1.2em;
+}
+
+.card p {
+    font-size: 0.75em;
+    font-family: 'Open Sans';
+    margin-top: 0.5em;
+    line-height: 2em;
+}
+
+.card .tags {
+    display: flex;
+}
+
+.card .tags .tag {
+    font-size: 0.75em;
+    background: rgba(255, 255, 255, 0.5);
+    border-radius: 0.3rem;
+    padding: 0 0.5em;
+    margin-right: 0.5em;
+    line-height: 1.5em;
+    transition: all, 0.5s;
+}
+
+.card:hover .tags .tag {
+    background: #ff4336;
+    color: white;
+}
+
+.card:before, .card:after {
+    content: '';
+    transform: scale(0);
+    transform-origin: top left;
+    border-radius: 50%;
+    position: absolute;
+    left: -50%;
+    top: -50%;
+    z-index: -5;
+    transition: all, 0.5s;
+    transition-timing-function: ease-in-out;
+}
+
+.card:before {
+    background: #ddd;
+    width: 250%;
+    height: 250%;
+}
+
+.card:after {
+    background: white;
+    width: 200%;
+    height: 200%;
+}
+
+.card:hover {
+    color: #ff4336;
+    transform: scale(1.05);
+    z-index: 1;
+}
+
+.card:hover:before, .card:hover:after {
+    transform: scale(1.1);
+}
+
+.card-grid-space .num {
+    font-size: 3em;
+    margin-bottom: 1.2rem;
+    margin-left: 1rem;
+}
+
+@media screen and (max-width: 1285px) {
+    .cards-wrapper {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .cards-wrapper {
+        grid-template-columns: 1fr;
+    }
+
+    .card-grid-space .num {
+    / margin-left: 0;
+    / text-align: center;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .cards-wrapper {
+        padding: 4rem 2rem;
+    }
+
+    .card {
+        max-width: calc(100vw - 4rem);
+    }
 }
