--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,7 @@ header {
 .navbar .toggle_btn {
     color: #fff;
     font-size: 1.5rem;
+    font-style: strong;
     cursor: pointer;
     display: none;
 }
@@ -162,7 +163,7 @@ header {
 
 @media screen and (max-width: 768px) {
     header {
-        padding: 0 1rem;
+        padding: 0 2rem;
     }
 
     .text-box h1 {
@@ -247,7 +248,8 @@ header {
 
 /* Kontakt */
 .sub-header {
-    padding: 0 4rem;
+    position: relative;
+    padding: 0 2rem;
     height: 50vh;
     background-color: #000;
     width: 100%;
