--- a/css/style.css
+++ b/css/style.css
@@ -188,10 +188,10 @@ header {
     display: inline-block;
     text-decoration: none;
     color: #fff;
-    border: 4px solid #fff;
+    border: 1px solid #fff;
     padding: 12px 34px;
     font-size: 13px;
-    font-weight: 800;
+    font-weight: bold;
     background: transparent;
     position: relative;
     cursor: pointer;
@@ -202,8 +202,9 @@ header {
 }
 
 .hero-btn:hover {
-    border: 4px solid #fff;
+    border: 1px solid #fff;
     background: #fff;
+    font-weight: bold;
     color: #000;
     transition: 1.5s;
 }
