--- a/css/style.css
+++ b/css/style.css
@@ -625,7 +625,7 @@ hr {
 }
 
 .tabulka {
-    padding: 15px 30px 80px 30px;
+    padding: 15px 5% 80px 5%;
     max-width: 600px;
     margin: 0 auto;
 }
@@ -666,10 +666,33 @@ hr {
 }
 
 @media only screen and (max-width: 600px) {
-    .tabulka th, .tabulka td {
+    .tabulka {
+        padding: 15px 5% 80px 5%;
+    }
+
+    .tabulka h4 {
+        font-size: 2rem;
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+
+    .tabulka table {
+        padding-top: 120px;
+    }
+
+    .tabulka th,
+    .tabulka td {
         font-size: 14px;
         padding: 2px;
         margin: 0 auto;
+    }
+
+    .tabulka th {
+        font-size: 16px;
+    }
+
+    .tabulka td {
+        font-size: 16px;
     }
 
     .tabulka caption {
@@ -682,7 +705,6 @@ hr {
 /*---zahlavi----*/
 .zapati {
     width: 100%;
-    /*text-align: center;*/
     padding: 30px 0 10px 0;
     display: flex;
     flex-direction: column;
@@ -693,6 +715,7 @@ hr {
     margin-bottom: 25px;
     margin-top: 20px;
     font-weight: 600;
+    font-size: 1.8rem;
 }
 
 .zapati p {
@@ -700,12 +723,15 @@ hr {
     margin: 0;
     font-size: 18px;
     justify-content: center;
+    text-align: center;
 }
 
 .zapati a.odkaz2 {
     color: #ff4336;
     text-decoration: none;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    margin-top: 15px;
 }
 
 .zapati  a.odkaz2:hover {
@@ -722,12 +748,17 @@ hr {
 
 
 @media only screen and (max-width: 600px) {
-    .zapati p {
-        display: block;
-        text-align: center;
-        justify-content: center;
+    .zapati h3 {
+        font-size: 1.5rem;
     }
 
+    .zapati p {
+        text-align: center;
+    }
+
+    .zapati a.odkaz2 {
+        margin-top: 10px;
+    }
 }
 
 .ikony {
@@ -751,7 +782,6 @@ hr {
 }
 
 /* KARTY HLAVNÍ STRÁNKA */
-
 .cards-wrapper {
     display: grid;
     justify-content: center;
