--- a/css/style.css
+++ b/css/style.css
@@ -361,7 +361,8 @@ header {
     border-radius: 3px;
     padding: 12px 34px;
     margin: 20px auto 0;
-    font-size: 13px;
+    font-size: 18px;
+    font-weight: bold;
     background: transparent;
     position: relative;
     cursor: pointer;
@@ -1009,27 +1010,28 @@ hr {
 }
 
 .your-location .find-state {
-    display: inline-block;
+    display: flex;
     text-decoration: none;
+    font-style: normal;
     color: #ff4336;
     border: 1px solid #ff4336;
-    padding: 12px 34px;
-    font-size: 13px;
+    padding: 10px 40px;
+    font-size: 18px;
+    font-weight: bold;
     background: transparent;
     position: relative;
     cursor: pointer;
-    margin: 0 5px;
-    flex-grow: 1;
-    max-width: 150px;
-    box-sizing: border-box;
-    border-radius: 3px;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin: 10px auto 0 auto;
 }
 
 .your-location .find-state:hover {
     border: 1px solid #f44336;
     background: #f44336;
-    transition: 1.5s;
     color: white;
+    transition: 1.5s;
 }
 
 .gallery {
