--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ header {
 }
 
 .action_btn {
-    background-color: #ff4436;
+    background-color: #cc0000;
     color: #fff;
     padding: 0.3rem 1rem;
     border: none;
@@ -356,8 +356,8 @@ header {
 .contact-col input[type="submit"] {
     text-align: center;
     text-decoration: none;
-    color: #ff4336;
-    border: 1px solid #ff4336;
+    color: #cc0000;
+    border: 1px solid #cc0000;
     border-radius: 3px;
     padding: 12px 34px;
     margin: 20px auto 0;
@@ -371,8 +371,8 @@ header {
 }
 
 .contact-col input[type="submit"]:hover {
-    border: 1px solid #f44336;
-    background: #f44336;
+    border: 1px solid #cc0000;
+    background: #cc0000;
     color: #fff;
     transition: 1.5s;
 }
@@ -439,8 +439,8 @@ header {
     display: flex;
     text-decoration: none;
     font-style: normal;
-    color: #ff4336;
-    border: 1px solid #ff4336;
+    color: #cc0000;
+    border: 1px solid #cc0000;
     padding: 10px 20px;
     font-size: 18px;
     font-weight: bold;
@@ -460,8 +460,8 @@ header {
 }
 
 .products-text .hero-btn:hover {
-    border: 1px solid #f44336;
-    background: #f44336;
+    border: 1px solid #cc0000;
+    background: #cc0000;
     color: white;
     transition: 1.5s;
 }
@@ -501,7 +501,7 @@ header {
 }
 
 .products-col a.odkaz2 {
-    color: #ff4336;
+    color: #cc0000;
     text-decoration: none;
     font-weight: bold;
     font-size: 14px;
@@ -513,11 +513,11 @@ header {
 }
 
 .products-col a.odkaz2:visited {
-    color: #ff4336;
+    color: #cc0000;
 }
 
 .products-text .odkaz:visited {
-    color: #ff4336;
+    color: #cc0000;
 }
 
 .products-text .odkaz:link {
@@ -525,7 +525,7 @@ header {
     font-weight: bold;
     display: inline-block;
     text-decoration: none;
-    color: #ff4336;
+    color: #cc0000;
     font-size: 16px;
     margin-top: 10px;
 }
@@ -669,7 +669,7 @@ hr {
 
 .tabulka caption {
     border: 2px solid black;
-    background-color: #ff4336;
+    background-color: #cc0000;
     color: white;
     padding: 10px;
     font-size: 24px;
@@ -739,7 +739,7 @@ hr {
 }
 
 .zapati a.odkaz2 {
-    color: #ff4336;
+    color: #cc0000;
     text-decoration: none;
     justify-content: center;
     align-items: center;
@@ -752,11 +752,13 @@ hr {
 }
 
 .zapati  a.odkaz2:visited {
-    color: #ff4336;
+    color: #cc0000;
+    font-weight: bold;
+
 }
 
-.zapati  .odkaz:visited {
-    color: #ff4336;
+.zapati  a.odkaz:visited {
+    color: #cc0000;
 }
 
 
@@ -781,7 +783,7 @@ hr {
 }
 
 .fa-facebook, .fa-instagram, .fa-twitter, .fa-spotify, .fa-github {
-    color: #f44336;
+    color: #cc0000;
     padding: 20px;
     font-size: 30px;
     width: 30px;
@@ -861,7 +863,7 @@ hr {
 }
 
 .card:hover .tags .tag {
-    background: #ff4336;
+    background: #cc0000;
     color: white;
 }
 
@@ -891,7 +893,7 @@ hr {
 }
 
 .card:hover {
-    color: #ff4336;
+    color: #cc0000;
     transform: scale(1.05);
     z-index: 1;
 }
@@ -1009,8 +1011,8 @@ hr {
     display: flex;
     text-decoration: none;
     font-style: normal;
-    color: #ff4336;
-    border: 1px solid #ff4336;
+    color: #cc0000;
+    border: 1px solid #cc0000;
     padding: 10px 40px;
     font-size: 18px;
     font-weight: bold;
@@ -1024,8 +1026,8 @@ hr {
 }
 
 .your-location .find-state:hover {
-    border: 1px solid #f44336;
-    background: #f44336;
+    border: 1px solid #cc0000;
+    background: #cc0000;
     color: white;
     transition: 1.5s;
 }
